test/arrays/bradc/scalarArrMismatch.good
scalarArrMismatch.chpl:4: error: type mismatch in assignment from real(64) to real(32)
